# jsonnet-lang-for-gazelle

./: MODULE.bazel  WORKSPACE.bzlmod  def.bzl  go.mod  go.sum
example/: BUILD.bazel  MODULE.bazel
example/test1/: demo.jsonnet
language/jsonnet/: BUILD.bazel  kinds.go
language/jsonnet/fileinfo/: BUILD.bazel
