module(
    name = "jsonnet_gazelle",
    repo_name = "com_github_gazelle_jsonnet",
)

# ========================================================================
# Bazel modules
# ========================================================================
bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "jsonnet_go", version = "0.20.0", repo_name = "com_github_google_go_jsonnet")
