load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_jsonnet_binary",
    languages = DEFAULT_LANGUAGES + [
        "@jsonnet_gazelle//language/jsonnet:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/vmware/jsonnet-lang-for-gazelle/example

gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_jsonnet_binary",
)
